--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="function.js"></script> -->
     <!-- <script src="class.js"></script> -->
-    <script src="object.js"></script>
+    <!-- <script src="object.js"></script> -->
+    <!-- <script src="array.js"></script> -->
+    <script src="array-api.js"></script>
 </head>
 <body>
     
